force-app/main/default/objects/Log_Event__e/Log_Event__e.object-meta.xml
<CustomObject>
    <description>Published by the Apex logger to create log records.</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>