force-app/main/default/objects/Log_Event__e/fields/Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message__c</fullName>
    <description>The error message of a thrown exception.</description>
    <label>Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>