force-app/main/default/objects/Log_Event__e/fields/Exception_Name__c.field-meta.xml
<CustomField>
    <fullName>Exception_Name__c</fullName>
    <description>The name of a thrown exception within Apex.</description>
    <label>Exception Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>