force-app/main/default/objects/Log_Event__e/fields/Executing_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Executing_User_Id__c</fullName>
    <description>Captures the Id of the user under which the execution context is running.</description>
    <label>Executing User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>