force-app/main/default/objects/Log_Event__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>A message stored for the log.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>