force-app/main/default/objects/Log_Event__e/fields/Object_Data__c.field-meta.xml
<CustomField>
    <fullName>Object_Data__c</fullName>
    <description>The JSON serialized object data from a log.</description>
    <label>Object Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>