force-app/main/default/objects/Log_Event__e/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Used to indicate the severity level of the captured log record. This maps to the restricted Severity picklist within the Log__c object.</description>
    <label>Severity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>