force-app/main/default/objects/Log_Event__e/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Captures the unique request Id generated for each execution context or transaction within Apex (sourced from Request class).</description>
    <label>Transaction Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>