force-app/main/default/objects/Log_Event__e/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Captures the Apex execution type (called Quiddity). Sourced from the Quiddity value of the Request class. Maps to the restricted Transaction Type picklist of the Log__c object.</description>
    <label>Transaction Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>